<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WheelShare</string>
    <string name="action_settings">Settings</string>
    <string name="logging">Logging…</string>
    <string name="title_activity_login">Logging in</string>
    <string name="password">Password: </string>
    <string name="username">Username: </string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="to">To: </string>
    <string name="user">user</string>
    <string name="message">message</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="addpayment">Add PayMent:</string>
    <string name="cardnumber">Card Number:</string>
    <string name="holdername">Cardholder\'s Name:</string>
    <string name="holdernamehint">(as it appears on the credit card)</string>
    <string name="expiration">Expiration Month:</string>
    <string name="email">Username: </string>
    <string name="first_name">First Name: </string>
    <string name="last_name">Last Name: </string>
    <string name="driver_licence">Driver Licence: </string>
    <string name="optional">Optional</string>
    <string name="confrim_password">Confirm Password: </string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="signing_up">Signing up…</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="post_ride">Post a Ride</string>
    <string name="search_ride">Search for a Ride</string>
    <string name="title_activity_post_ride">Post Ride</string>
    <string name="title_activity_search_ride">Search Ride</string>
    <string name="title_activity_show_ride">Ride Details</string>
    <string name="title_activity_manage">ManageActivity</string>
    <string name="title_activity_manage_posted_ride">ManagePostedRideActivity</string>
    <string name="manage_ride">Manage my rides</string>
    <string name="manage_pay">Pay this ride</string>
    <string name="confirm">Confirm</string>
    <string name="price">Price:</string>
    <string name="accept">I agree to the Term of Service.</string>
    <string name="title_activity_manage_joined_ride">ManageJoinedRideActivity</string>
    <string name="title_activity_payment">Payment</string>
    <string name="start_city">Start City: </string>
    <string name="dest_city">Dest City: </string>
    <string name="date">Date: </string>
    <string name="date_hint">Select Date: </string>
    <string name="time">Time: </string>
    <string name="seat">Seats: </string>
    <string name="status">Status: </string>
    <string name="owner">Owner: </string>
    <string name="join">Join: </string>
    <string name="from">From: </string>
    <string name="from_hint">The city you are now </string>
    <string name="to_hint">The city you want to go </string>
    <string name="search">Search</string>
    <string name="time_hint">set off time</string>
    <string name="price_hint">set off price</string>
    <string name="passanger_num">number of passangers</string>
    <string name="post">Post</string>
    <string name="post_rides">Posted rides: </string>
    <string name="join_rides">Joined rides: </string>
    <string name="request">Request </string>
    <string name="reset">Reset </string>
    <string name="username_missing">Username missing</string>
    <string name="password_missing">Password missing</string>
    <string name="error">Error</string>
    <string name="no_response">No response from server.</string>
	<string name="results">Results found: </string>
    <string name="no_results">No result found.</string>
    <string name="accepted">Accepted</string>
    <string name="paid">Paid</string>
    <string name="rejected">Rejected</string>
    <string name="pending">Pending</string>
    <string name="not">not </string>
    <string name="username_not_exist">Username doesn\'t exist.</string>
    <string name="password_not_correct">Password not correct.</string>
    <string name="log_in_sucessfully">Log in successfully.</string>
    <string name="invalid_credit">Invalid Credit Number.</string>
    <string name="please_agree">Please agree to the Term of Service.</string>
    <string name="payment_processed">Your payment has been processed.</string>
    <string name="payment_placed">Your payment has been placed.</string>
    <string name="ride_time_missing">Ride time missing</string>
    <string name="start_city_missing">Start city missing</string>
    <string name="dest_city_missing">Destination city missing</string>
    <string name="price_missing">Price missing</string>
    <string name="seats_number_missing">Seats number missing</string>
    <string name="ride_been_posted">Your ride has been posted!</string>
    <string name="firstname_missing">Firstname cannot be empty.</string>
    <string name="lastname_missing">Lastname cannot be empty.</string>
    <string name="password_not_match">Confirm password doesn\'t match.</string>
    <string name="username_already_existed">Username has already existed.</string>
    <string name="new_user_created">New user has created: </string>
    <string name="join_sent">Joining request has sent.</string>
    <string name="seats_full">Seats are full.</string>
    <string name="already_requested">You\'ve already requested this ride.</string>
    <string name="back">Back</string>
    <string name="date_missing">Date missing.</string>
    <string name="welcome_back">Welcome back, </string>
    <string name="logout">Log out</string>
    <string name="title_activity_invite">Invite</string>
    <string name="contact_owner">Contact Owner</string>
    <string name="title_activity_contact">Contact</string>
    <string name="message_sent">Message Sent</string>
    <string name="message_reply">Reply</string>
    <string name="invited">User Invited</string>
    <string name="request_success">Request posted</string>
    <string name="request_this_ride">Request this ride</string>
    <string name="invite_users">Users seeking this ride: </string>
    <string name="time_incorrect">Ride time can\'t be earlier than the current time.</string>
    

</resources>