<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".RideSearchActivity" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/from"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edittext_from_post"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/from_hint"
            android:inputType="text" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/to"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edittext_dest_post"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/to_hint"
            android:inputType="text" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/date"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textview_date_post"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="showDatePicker"
            android:hint="@string/date_hint"
            android:textSize="20sp" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/time"
            android:textSize="20sp" />

        <TextView android:id="@+id/textview_time_post"
                  android:layout_width="0dip"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:clickable="true"
                  android:onClick="showTimePicker"
                  android:hint="@string/time_hint" 
                  android:textSize="20sp"/>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/price"
            android:textSize="20sp" />

        <EditText android:id="@+id/edittext_price_post"
                  android:layout_width="0dip"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:hint="@string/price_hint" 
                  android:inputType="number"/>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/seat"
            android:textSize="20sp" />

        <EditText android:id="@+id/edittext_seat_post"
                  android:layout_width="0dip"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:hint="@string/passanger_num" 
                  android:inputType="number" 
                  android:lines="1"/>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <Button
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="post_request"
            android:text="@string/post"
            android:textSize="20sp" />
        
        <Button
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/reset"  
            android:onClick="reset"          
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>