<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="5dp"
              android:orientation="vertical">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/show_ride_row_owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/owner"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/show_ride_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:id="@+id/show_ride_row_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_city"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/show_ride_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:id="@+id/show_ride_row_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dest_city"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/show_ride_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:id="@+id/show_ride_row_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/show_ride_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:id="@+id/show_ride_row_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/show_ride_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:id="@+id/show_ride_row_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/show_ride_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:id="@+id/show_ride_row_seats_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seat"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/show_ride_seats_available"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </TableRow>

    </TableLayout>


    <Button
        android:onClick="join_request"
        android:id="@+id/show_ride_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join" />

</LinearLayout>
