<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout 
        	android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/from"
	        android:textSize="20sp" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"
	        android:id="@+id/contact_username2" />
	    
	</LinearLayout>

    <EditText
        android:id="@+id/contact_message2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:lines="10"
        android:inputType="textMultiLine"
        android:gravity="top"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:onClick="reply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_reply" />

        <Button
            android:onClick="cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>