<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="5dp"
              android:orientation="vertical">
    

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TableRow
            android:id="@+id/invite_ride_row_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_city"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/invite_ride_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
            
        </TableRow>
        
        <TableRow
            android:id="@+id/invite_ride_row_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dest_city"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/invite_ride_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
            
        </TableRow>
        
        <TableRow
            android:id="@+id/invite_ride_row_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/invite_ride_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
            
        </TableRow>
    </TableLayout>
        
    <TableLayout
        android:id="@+id/table_invite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">
        
        <TableRow 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invite_users"
                android:textSize="20sp" />    
                
        </TableRow>
        
    </TableLayout>

</LinearLayout>
